@@ -13,7 +13,7 @@ $	exe_dir = "sys$disk:[-.''__arch'.exe.apps]"
 $
 $	openssl = "mcr ''f$parse(exe_dir+"openssl.exe")'"
 $	OPENSSL_CONF = "[-]CAtsa.cnf"
-$	! Because that's what ../apps/CA.sh really looks at
+$	! Because that's what ../apps/CA.pl really looks at
 $	SSLEAY_CONFIG = "-config " + OPENSSL_CONF
 $
 $ error:
